// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`REST endpoint testing for /admin/user create item when logged in as an admin and the item is valid Returns the expected result 1`] = `
Object {
  "username": "username",
}
`;

exports[`REST endpoint testing for /admin/user delete item when logged in as an admin Returns the expected result 1`] = `
Object {
  "id": "06fa4616-48b4-11ea-9642-0242ac140002",
  "password": "$2b$10$giJdjgOtFHA7NGYgW5ceq.CCvmrpVAWnmH.tw68Ge/QTr1oaO65Yu",
  "roles": Array [],
  "username": "username",
}
`;

exports[`REST endpoint testing for /admin/user edit item when logged in as an admin Returns the expected result 1`] = `
Object {
  "id": "0738cb20-48b4-11ea-9642-0242ac140002",
  "roles": Array [
    "new-role",
  ],
  "username": "username2",
}
`;

exports[`REST endpoint testing for /admin/user get all when logged in as an admin Returns the expected result 1`] = `
Array [
  Object {
    "id": "30e59fda-220b-4e8b-9e01-3a9f8ceeec45",
    "roles": Array [
      "admin",
    ],
    "username": "admin-user",
  },
  Object {
    "id": "53f5a3d1-db75-4c62-a309-79b3eea329b3",
    "roles": Array [],
    "username": "non-admin-user",
  },
]
`;

exports[`REST endpoint testing for /admin/user get single item when logged in as an admin Returns the expected result 1`] = `""`;
